trying to re link css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <main>
       <h1>Trailer Loving Hicks .Org</h1>
-      <h3>For your trailer loving dicks, 'n clits!</h3>
+      <h3>For your trailer lovin dicks, 'n clits!</h3>
 
       <div>
         <img
